QMAPS fix line alignment in itinerary panel Desktop

--- a/src/scss/includes/direction-form.scss
+++ b/src/scss/includes/direction-form.scss
@@ -77,7 +77,7 @@
     margin-left: 48px;
 
     @media (min-width: 641px) {
-      margin-left: 64px;
+      margin-left: 55px;
     }
   }
 }
